@@ -1,3 +1,4 @@
+	* added missing async_add_torrent to python bindings
 	* raised the limit for bottled http downloads to 2 MiB
 	* add support for magnet links and URLs in python example client
 	* fixed typo in python bindings' add_torrent_params
